[package]
name = "standard-schema"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
ts-rs = { version = "11.0.1", optional = true }
validator = { version = "0.20.0", optional = true }

[features]
default = ["ts-rs", "validator"]
ts-rs = ["dep:ts-rs"]
validator = ["dep:validator"]
